trunk/Archive2/45/9cb07926e203e5/output
main.cpp: In function 'int main()':
main.cpp:19:16: error: wrong number of template arguments (2, should be 1)
     rank<int, 2> r;
                ^
main.cpp:5:8: error: provided for 'template<class T> struct rank'
 struct rank
        ^
main.cpp:19:19: error: invalid type in declaration before ';' token
     rank<int, 2> r;
                   ^
main.cpp:19:18: warning: unused variable 'r' [-Wunused-variable]
     rank<int, 2> r;
                  ^
